# showcase

./: LICENSE  README.md
cpp/ForninoSartori18/: CMakeLists.txt  main.cpp  main_full.cpp
cpp/ForninoSartori18/old/: main_full_trial.cpp
cpp/ForninoSartori18/src/: Model.cpp  Model.h  StructuralParameters.h  TechnicalParameters.h  markovchains
cpp/ForninoSartori18/user/: structuralParameters.txt  technicalParameters.txt
cpp/markovchains/: CMakeLists.txt  MarkovChain.cpp  MarkovChain.h  MarkovChainSimulations.h  main.cpp
cpp/markovchains/old/: DenseCTMC.cpp  DenseCTMC.h  DenseDTMC.cpp  DenseDTMC.h  SimCTMC.h  SparseCTMC.cpp  SparseCTMC.h
julia/covid/: SIR.jl
